Infinity Scroll alignment fixed

--- a/InfinityScroll/css/app.css
+++ b/InfinityScroll/css/app.css
@@ -1,3 +1,5 @@
+/* Defaults */
+
 html {
     box-sizing : border-box;
 }
@@ -10,38 +12,48 @@ button {
     cursor : pointer;
 }
 
+/* Loader */
+
 #loader {
-    top: auto;
-    left: auto;
-    z-index: 99;
-    position: fixed;
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    animation: spin 2s linear infinite;
+    top : auto;
+    left : auto;
+    z-index : 99;
+    position : fixed;
+    width : 2.5rem;
+    height : 2.5rem;
+    border-radius : 50%;
+    border : 16px solid #f3f3f3; /* Light grey */
+    border-top : 16px solid #3498db; /* Blue */
+    animation : spin 2s linear infinite;
 }
   
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
 }
+
+/* Title */
 
 h1 {
-    text-align: center;
+    text-align : center;
 }
 
+/* Images */
+
 body::-webkit-scrollbar {
-    display: none;
+    display : none;
 }
 
 #image-container {
-    margin: 0 30% 0 30%;
+    margin : 0 25% 0 25%;
 }
 
-@media screen and (max-width: 600) {
+@media screen and (max-width : 600) {
     #image-container {
-        margin: 0 10% 0 10%;
+        margin : 0 10% 0 10%;
     }
+}
+
+#image-container img {
+    width : 100%;
 }
